tests/ui/basic/index_out_of_bounds.rs
use metamatch::eval;

fn main() {
    eval! {
        [1, 2, 3][10]
    };
}
